--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,41 +1,68 @@
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Books</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="mr-auto"></div>
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Course</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Price</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <div class="dropdown">
-                        <a href="#" class="nav-link">Pages</a>
-                        <div class="dropdown-content">
-                            <a href="#">Generic</a>
-                            <a href="#">Element</a>
-                        </div>
+<header>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#"><i class="fas fa-book-reader fa-3x mx-3"></i>Books</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-align-right text-light"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="mr-auto"></div>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Course</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Price</a>
+            </li>
+            <li class="nav-item dropdown">
+                <div class="dropdown">
+                    <a href="#" class="nav-link">Pages</a>
+                    <div class="dropdown-content">
+                        <a href="#">Generic</a>
+                        <a href="#">Element</a>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Fact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Fact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
             </ul>
-        </div>
+    </div>
     </nav>
-</div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-7 col-sm-12">
+                <h6>AUTHOR: DAILY TUITION</h6>
+                <h1>EXCITING ADVENTURE</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam illum consequuntur nihil at quos harum id facilis vitae earum.
+                </p>
+                <button class="btn btn-light px-5 py-2">By now for $5.99</button>
+            </div>
+            <div class="col-md-5 col-ms-12 h-25">
+                <img src="../../assets/images/header-img.png" alt="Books" />
+            </div>
+        </div>
+    </div>
+</header>
 
 <app-home></app-home>
 <app-footer></app-footer>
