--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,3 @@
-<div class="container text-center">
-    <div class="row">
-        <div class="col-md-7 col-sm-12">
-            <h6>AUTHOR: DAILY TUITION</h6>
-            <h1>EXCITING ADVENTURE</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam illum consequuntur nihil at quos harum id facilis vitae earum.
-            </p>
-            <button class="btn btn-light px-5 py-2">By now for $5.99</button>
-        </div>
-        <div class="col-md-5 col-ms-12 h-25">
-            <img src="../../assets/images/header-img.png" alt="Books" />
-        </div>
-    </div>
-</div>
 <main>
     <section class="section-1">
         <div class="container text-center">
@@ -127,6 +112,7 @@
       </div>
     </div>
   </section>
+  <!-- section 3 -->
   <section class="section-3 container-fluid p-0 text-center">
     <div class="row">
       <div class="col-md-12 col-sm-12">
@@ -143,7 +129,7 @@
       <div class="col-md-6 col-sm-12 text-right">
         <div class="desktop shadow-lg">
           <div class="d-flex flex-row justify-content-center">
-            <i class="fas fa-desktop fa-3x pyé pr-3"></i>
+            <i class="fas fa-desktop fa-3x py2 pr-3"></i>
             <div class="text text-left">
               <h3 class="pt-1 m-0">Desktop</h3>
               <p class="p-0 m-0">On Website</p>
@@ -164,6 +150,7 @@
       </div>
     </div>
   </section>
+  <!-- section 4 -->
   <section class="section-4">
     <div class="container text-center">
       <h1 class="text-dark">What out Reader's Say About us</h1>
@@ -176,7 +163,7 @@
             <img
               src="../../assets//images//UI-face-3.jpg"
               alt="Member"
-              class="img-fluid"
+              class="img-fluid border-radius"
             />
           </div>
           <div class="card-body">
@@ -208,7 +195,7 @@
                   <img
                     src="../../assets//images//UI-face-1.jpg"
                     alt="Member"
-                    class="img-fluid"
+                    class="img-fluid rounded-circle w-50"
                   />
                 </div>
                 <div class="card-body">
@@ -228,12 +215,12 @@
             </div>
             <div class="carousel-item text-center">
               <!-- card 3 -->
-              <div class="card mr-2 d-inline-block shadow-lg">
+              <div class="card carousel-box mr-2 d-inline-block shadow-lg">
                 <div class="card img-top">
                   <img
                     src="../../assets//images//UI-face-2.jpg"
                     alt="Member"
-                    class="img-fluid"
+                    class="img-fluid rounded-circle w-50"
                   />
                 </div>
                 <div class="card-body">
@@ -261,7 +248,7 @@
             <img
               src="../../assets//images//UI-face-4.jpg"
               alt="Member"
-              class="img-fluid"
+              class="img-fluid border-radius"
             />
           </div>
           <div class="card-body">
